==> eboxmaker/eBox_Framework/ebox/hardware/n32g030/Peripherals/ebox_uart.cpp <==
#include "ebox_uart.h"
#include "ebox_mem.h"

void    Uart::begin(uint32_t baud_rate, RxMode_t mode)
{
    Uart::begin(baud_rate, 8, 0, 1, mode);
}

void Uart::begin(uint32_t baud_rate, uint8_t data_bit, uint8_t parity, float stop_bit, RxMode_t mode)
{
    USART_InitType   USART_InitStructure;

    rcc_clock_cmd((uint32_t)_USARTx, ENABLE);
    this->mode = mode;


    switch((uint32_t)_USARTx)
    {
#if USE_UART1
    case (uint32_t)USART1_BASE:
        dma_rx = new Dma(DMA_CH5);//&Dma1Ch5;
        index = NUM_UART1;
        break;
#endif

#if USE_UART2
    case (uint32_t)USART2_BASE:
        dma_rx = new Dma(DMA_CH3);//&Dma1Ch6;
        index = NUM_UART2;
        break;
#endif

#if USE_UART3
    case (uint32_t)USART3_BASE:
        dma_rx = new Dma(DMA1_Channel3);//&Dma1Ch3;
        index = NUM_UART3;
        break;
#endif

#if defined (STM32F10X_HD)
#if USE_UART4
    case (uint32_t)UART4_BASE:
        index = NUM_UART4;
        this->mode = RxIt;
        break;
#endif

#if USE_UART5
    case (uint32_t)UART5_BASE:
        index = NUM_UART5;
        this->mode = RxIt;
        break;
#endif
#endif
    }

    _tx_buffer_size[index] = tx_buffer_size;
    _rx_buffer_size[index] = rx_buffer_size;

#ifdef UART_9_BIT
    _tx_ptr[index] = (uint16_t *)rt_malloc(_tx_buffer_size[index] * sizeof(uint16_t));
    _rx_ptr[index] = (uint16_t *)rt_malloc(_rx_buffer_size[index] * sizeof(uint16_t));
#else
    _tx_ptr[index] = (uint8_t *)ebox_malloc(_tx_buffer_size[index] * sizeof(uint8_t));
    _rx_ptr[index] = (uint8_t *)ebox_malloc(_rx_buffer_size[index] * sizeof(uint8_t));
#endif



    serial_irq_handler(index, Uart::_irq_handler, (uint32_t)this);


    USART_InitStructure.BaudRate = baud_rate;
    switch(data_bit)
    {
    case 8:
        USART_InitStructure.WordLength = USART_WL_8B;
        break;
    case 9:
        USART_InitStructure.WordLength = USART_WL_9B;
        break;
    default :
        USART_InitStructure.WordLength = USART_WL_8B;
        break;
    }
    switch(parity)
    {
    case 0:
        USART_InitStructure.Parity = USART_PE_NO;
        break;
    case 1:
        USART_InitStructure.Parity = USART_PE_EVEN;
        break;
    case 2:
        USART_InitStructure.Parity = USART_PE_ODD;
        break;
    default :
        USART_InitStructure.Parity = USART_PE_NO;
        break;
    }
    if(stop_bit == 0.5)
        USART_InitStructure.StopBits = USART_STPB_0_5;
    else if(stop_bit == 1)
        USART_InitStructure.StopBits = USART_STPB_1;
    else if(stop_bit == 1.5)
        USART_InitStructure.StopBits = USART_STPB_1_5;
    else if(stop_bit == 2)
        USART_InitStructure.StopBits = USART_STPB_2;

    USART_InitStructure.HardwareFlowControl = USART_HFCTRL_NONE;
    USART_InitStructure.Mode = USART_MODE_RX | USART_MODE_TX;
    USART_Init(_USARTx, &USART_InitStructure);


    if((mode == RxDMA) && (dma_rx != NULL))
    {
        USART_EnableDMA(_USARTx, USART_DMAREQ_RX, ENABLE);
        dma_rx->rcc_enable();
        dma_rx->nvic(DISABLE, 0, 0);
        dma_rx->interrupt(DmaItTc, DISABLE);
        dma_rx->interrupt(DmaItTe, DISABLE);
        dma_rx->interrupt(DmaItHt, DISABLE);

        DMA_InitType DMA_InitStructure;

        dma_rx->deInit();

        DMA_InitStructure.PeriphAddr = (uint32_t)&_USARTx->DAT;
        DMA_InitStructure.MemAddr = (uint32_t) _rx_ptr[index];
        DMA_InitStructure.Direction = DMA_DIR_PERIPH_SRC;
        DMA_InitStructure.BufSize = _rx_buffer_size[index];
        DMA_InitStructure.PeriphInc = DMA_PERIPH_INC_DISABLE;
        DMA_InitStructure.DMA_MemoryInc = DMA_MEM_INC_ENABLE;
#ifdef UART_9_BIT
        DMA_InitStructure.DMA_PeripheralDataSize = DMA_PeripheralDataSize_HalfWord;
        DMA_InitStructure.DMA_MemoryDataSize = DMA_MemoryDataSize_HalfWord;
#else
        DMA_InitStructure.PeriphDataSize = DMA_PERIPH_DATA_SIZE_BYTE;
        DMA_InitStructure.MemDataSize = DMA_MemoryDataSize_Byte;
#endif
        DMA_InitStructure.CircularMode = DMA_MODE_CIRCULAR;
        DMA_InitStructure.Priority = DMA_PRIORITY_HIGH;
        DMA_InitStructure.Mem2Mem = DMA_M2M_DISABLE;
        dma_rx->init(&DMA_InitStructure);
        DMA_RequestRemap(DMA_REMAP_USART1_RX, DMA, dma_rx->DMAy_Channelx, ENABLE);

        dma_rx->enable();
    }

    USART_Enable(_USARTx,ENABLE);
    _tx_pin->mode(AF_PP,GPIO_AF4_USART1);
    _rx_pin->mode(AF_PP,GPIO_AF4_USART1);

    nvic(ENABLE, 0, 0);
    interrupt(RxIrq, ENABLE);
    interrupt(TxIrq, DISABLE);

    _is_inited = true;
}

void Uart::nvic(FunctionalState enable, uint8_t preemption_priority, uint8_t sub_priority )
{
    this->preemption_priority = preemption_priority;
    this->sub_priority = sub_priority;
//    nvic_dev_set_priority((uint32_t)_USARTx, 0, preemption_priority, sub_priority);
//    if(enable != DISABLE)
//        nvic_dev_enable((uint32_t)_USARTx, 0);
//    else
//        nvic_dev_disable((uint32_t)_USARTx, 0);
    NVIC_InitType NVIC_InitStructure;
    NVIC_InitStructure.NVIC_IRQChannel          = dev_to_irqn((uint32_t)_USARTx,0);
    NVIC_InitStructure.NVIC_IRQChannelPriority  = preemption_priority;
    NVIC_InitStructure.NVIC_IRQChannelCmd       = enable;
    NVIC_Init(&NVIC_InitStructure);
}

void Uart::interrupt(IrqType type, FunctionalState enable)
{

    if(type == RxIrq)
        USART_ConfigInt(_USARTx, USART_INT_RXDNE, ENABLE);//接收中断不能关闭，
    if(type == TxIrq)
        USART_ConfigInt(_USARTx, USART_INT_TXDE, enable);
}

void Uart::flush()
{
    uint8_t major, minor;
    while(_tx_buffer_head[index] != _tx_buffer_tail[index] )
    {
        //如果全局中断被关闭,发送使能中断被关闭、在其他中断函数中,则手动发送
        //        if(__get_PRIMASK() || ((_USARTx->CR1 & USART_FLAG_TXE) == 0))
        if(__get_PRIMASK() || ((_USARTx->CTRL1 & USART_FLAG_TXDE) == 0) || (__get_IPSR() != 0))
        {
            while(USART_GetFlagStatus(_USARTx, USART_FLAG_TXDE) == RESET);//单字节等待，等待寄存器空
            tx_bufferx_one(_USARTx, index);
        }
        //或者等待串口中断发送完成所有数据的传输
    }
}

    void tx_bufferx_one(USART_Module *uart, uint8_t index)
    {
        if (_tx_buffer_head[index] == _tx_buffer_tail[index])//如果空则直接返回
        {
            USART_ConfigInt(uart, USART_INT_TXDE, DISABLE);// Buffer empty, so disable interrupts
            return;
        }
        unsigned char c = _tx_ptr[index][_tx_buffer_tail[index]];   // 取出字符
        _tx_buffer_tail[index] = (_tx_buffer_tail[index] + 1) % _tx_buffer_size[index];
        uart->DAT = (c & (uint16_t)0x01FF);

    }

    void rx_buffer_one(USART_Module *uart, uint8_t index)
    {
        uint16_t i = (_rx_buffer_head[index] + 1) % _rx_buffer_size[index];//计算头的位置
        if(i == _rx_buffer_tail[index]) //如果环形缓冲区满了就修改一次tail，将会舍弃最老的一个数据
        {
            _rx_buffer_tail[index] = (_rx_buffer_tail[index] + 1) % _rx_buffer_size[index];
        }
        _rx_ptr[index][_rx_buffer_head[index]] = uart->DAT;
        _rx_buffer_head[index] = i;
    }

    void USART1_IRQHandler(void)
    {
        
        if(USART_GetIntStatus(USART1, USART_INT_RXDNE) == SET)
        {
            rx_buffer_one(USART1, NUM_UART1);
            irq_handler(serial_irq_ids[NUM_UART1], RxIrq);
            USART_ClrIntPendingBit(USART1, USART_INT_RXDNE);
        }
        if(USART_GetIntStatus(USART1, USART_INT_TXDE) == SET)
        {
            tx_bufferx_one(USART1, NUM_UART1);
            irq_handler(serial_irq_ids[NUM_UART1], TxIrq);
        }
    }

    void USART2_IRQHandler(void)
    {
        if(USART_GetIntStatus(USART2, USART_INT_RXDNE) == SET)
        {
            rx_buffer_one(USART2, NUM_UART2);
            irq_handler(serial_irq_ids[NUM_UART2], RxIrq);
            USART_ClrIntPendingBit(USART2, USART_INT_RXDNE);
        }
        if(USART_GetIntStatus(USART2, USART_INT_TXDE) == SET)
        {
            tx_bufferx_one(USART2, NUM_UART2);
            irq_handler(serial_irq_ids[NUM_UART2], TxIrq);
        }
    }

    void USART3_IRQHandler(void)
    {
        if(USART_GetITStatus(USART3, USART_IT_RXNE) == SET)
        {
            rx_buffer_one(USART3, NUM_UART3);
            irq_handler(serial_irq_ids[NUM_UART3], RxIrq);
            USART_ClearITPendingBit(USART3, USART_IT_RXNE);
        }
        if(USART_GetITStatus(USART3, USART_IT_TXE) == SET)
        {
            tx_bufferx_one(USART3, NUM_UART3);
            irq_handler(serial_irq_ids[NUM_UART3], TxIrq);
        }
    }
